create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="features13 cid-rUiCAR5jki" id="features13-3">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="features13 cid-rUiCAR5jki" id="features13-3">
 
     
 
@@ -182,7 +182,7 @@
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2"><span style="font-weight: normal;"><em>Sur ce site, tu peux...</em></span></h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Voir des nouvelles personnes, sans sortir de chez toi. T'amuser, discuter de l'actu, apprendre ou juste boire un verre. Un bar virtuel où il n'y a pas besoin d'appeler un taxi pour rentrer!</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Voir des nouvelles personnes, sans sortir de chez toi. T'amuser, discuter, apprendre ou juste boire un verre. Un bar virtuel où il n'y a pas besoin d'appeler un taxi pour rentrer!</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="https://mobirise.co">EN SAVOIR PLUS</a>
                 </div>
             </div>
